# nn-insight

./: .gitmodules  CMakeLists.txt  DataTable2D.cpp  DataTable2D.h  README.md  ZoomableSvgWidget.cpp  ZoomableSvgWidget.h  colors.cpp  colors.h  compute.cpp  compute.h  constant-values.cpp  constant-values.h  copy-model.cpp  copy-model.h  data-table-2d.cpp  data-table-2d.h  fonts.cpp  fonts.h  graphviz-cgraph.cpp  graphviz-cgraph.h  image-grid-widget.cpp  image-grid-widget.h  image.cpp  image.h  in-memory-model.cpp  in-memory-model.h  main-window.cpp  main-window.h  main.cpp  misc.h  model-functions.cpp  model-functions.h  model-validator.cpp  model-validator.h  nn-model-viewer.cpp  nn-model-viewer.h  nn-operators.cpp  nn-operators.h  nn-types.cpp  (+42 more)
cmake/: Findpng++.cmake
model-views/: README  merge-dequantize-operators.cpp  merge-dequantize-operators.h
plugins/: CMakeLists.txt
plugins/tf-lite/: .gitignore  CMakeLists.txt  operator-list.cpp  operator-options.cpp  tf-lite.cpp  tflite_schema_generated.h
